--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<meta charset="UTF-8">
 		<title>Gif Tastic</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="/Users/sureshmahato/Desktop/GifTastic/assets/CSS/reset.css">
-		<link rel="stylesheet" type="text/css" href="/Users/sureshmahato/Desktop/GifTastic/assets/CSS/style.css">
+		<link rel="stylesheet" type="text/css" href="assets/CSS/reset.css">
+		<link rel="stylesheet" type="text/css" href="assets/CSS/style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-		<script type="text/javascript" src="/Users/sureshmahato/Desktop/GifTastic/assets/javascript/gif.js"></script>
+		
 	</head>
 	<body>
 		<div class = "row">
@@ -28,5 +28,6 @@
 				</form>
 			</div>
     </div>
+    <script type="text/javascript" src="assets/javascript/gif.js"></script>
 </body>
 </html>
